--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 # GraphQL Settings
 # Enable the GraphQL UI for easy API testing in your browser
 spring.graphql.graphiql.enabled=true
+
+# Google Gemini API Configuration
+***REMOVED***
+app.gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
