--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,12 @@ dependencies {
     testImplementation 'org.springframework.graphql:spring-graphql-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+    // We explicitly define the Flyway version. 11.0.0 is a recent version
+    // that is confirmed to support PostgreSQL 17+.
+    def flywayVersion = "11.0.0"
+    implementation "org.flywaydb:flyway-core:${flywayVersion}"
+    runtimeOnly "org.flywaydb:flyway-database-postgresql:${flywayVersion}"
 }
 
 tasks.named('test') {
