--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,8 @@ spring.datasource.password=alakazam@2717
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Settings
-# This tells Hibernate to automatically update the database schema based on your entities.
-# It's great for development but should be changed to "validate" or "none" in production.
-spring.jpa.hibernate.ddl-auto=update
+# Using Flyway for database migrations, so disable Hibernate's automatic schema generation
+spring.jpa.hibernate.ddl-auto=validate
 
 # GraphQL Settings
 # Enable the GraphQL UI for easy API testing in your browser
@@ -18,3 +17,8 @@ spring.graphql.graphiql.enabled=true
 # Google Gemini API Configuration
 ***REMOVED***
 app.gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
+
+# Flyway Configuration
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.clean-disabled=false
