--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,17 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+# Ignore the actual properties file containing secrets
+/src/main/resources/application.properties
+
+/frontend/node_modules
+/frontend/.next
+/frontend/out
+/frontend/build
+/frontend/node-*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 ### STS ###
 .apt_generated
